--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Thang Nguyen | Software Engineer and Avid Learner</title>
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGHM6T4EV6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QGHM6T4EV6');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
